# solt

./: LICENSE  Makefile  README.md  meson.build  package.yml  solt  solt-completion.bash  solt_common  solt_conf  solt_conf_check  solt_default.conf  solt_functions  solt_help  solt_log  solt_repo  solt_solbuild  solt_source
